samples/echo-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
  labels:
    kcp.dev/transformer: deployment-transformer
    kcp.dev/cluster: ""
  annotations:
    kcp.dev/assigned-locations: "kcp-cluster-b"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
        - name: echo-server
          image: jmalloc/echo-server
          ports:
            - name: http-port
              protocol: TCP
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: httpecho
  labels:
    kcp.dev/cluster: "kcp-cluster-b"
spec:
  ports:
    - name: http-port
      port: 80
      targetPort: http-port
      protocol: TCP
  selector:
    app: echo-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-domain
  annotations:
    kcp.dev/assigned-locations: "kcp-cluster-b"
  labels:
    kcp.dev/transformer: "ingress-transformer"
    kcp.dev/cluster: ""
spec:
  rules:
    - host: my-hostname.kcp-apps.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpecho
                port:
                  number: 80
